# danbooru-client

./: .gitignore  CMakeLists.txt  ChangeLog  Messsages.sh  README  TODO  actiondialog.py  api.py  connect_dialog.py  connectdialog.py  danbooru2nepomuk.py  danbooru_client.desktop  danbooru_client.py  danbooruui.rc  fetchdialog.py  hashes.py  imagewidget.py  kioslave.py  mainwindow.py  preferences.py  test_api.py  testapi.py  thumbnailview.py  ui_actiondialog.py  ui_connectdialog.py  ui_fetchdialog.py  ui_generalpage.py
danbooru/: CMakeLists.txt  ChangeLog  actiondialog.py  api.py  connectdialog.py  connectwidget.py  danbooru2nepomuk.py  danbooru_client.py  danboorupostwidget.py  danbooruui.rc  fetchdialog.py  fetchwidget.py  hashes.py  mainwindow.py  pooldialog.py  poolwidget.py  preferences.py  tagwidget.py  test_api.py  thumbnailarea.py  thumbnailview.py
danbooru/api/: CMakeLists.txt  __init__.py  containers.py  remote.py  utils.py
danbooru/test/: CMakeLists.txt  test_api.py
danbooru/test/pool/: index.xml  show.xml
danbooru/test/post/: index.json  index.xml
danbooru/ui/: CMakeLists.txt  ui_actiondialog.py  ui_connectwidget.py  ui_fetchdialog.py  ui_fetchwidget.py  ui_generalpage.py  ui_nepomukpage.py  ui_pooldock.py  ui_poolwidget.py  ui_thumbnailarea.py
danbooru/ui_src/: Ui_thumbnailarea.py  action.patch  actiondialog.ui  actiondialog_new.ui  area.patch  connectwidget.ui  fetchdialog.ui  fetchwidget.ui  generalpage.ui  generalpage_new.ui  nepomukpage.ui  pooldock.ui  poolwidget.ui  thumbnailarea.ui
po/: CMakeLists.txt  danbooru_client.pot  index.lokalize  it.po
po/lokalize-scripts/: scripts.rc
ui/: actiondialog.ui  connectdialog.ui  danboorupage.ui  generalpage.ui  generalpage_new.ui  nepomukpage.ui  ui_danboorupage.py
ui_src/: fetchdialog.ui  izzo.ui  nepomukpage.ui
